// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-qkdply,
[data-css-qkdply] {
  position: relative;
  transform: translate(-25, -25);
  -webkit-transform: translate(-25, -25);
}

.css-qkdply > div,
[data-css-qkdply] > div {
  animation-fill-mode: both;
  animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
  background-color: #ffffff;
  height: 10px;
  left: -5px;
  position: absolute;
  top: -5px;
  width: 10px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
}

.css-qkdply > div:last-child,
[data-css-qkdply] > div:last-child {
  animation-delay: -0.8s;
  -webkit-animation-delay: -0.8s;
}

<CubeTransition
  loading={true}
>
  <div
    data-css-qkdply=""
  >
    <div />
    <div />
  </div>
</CubeTransition>
`;

exports[`enzyme.render 1`] = `
.css-qkdply,
[data-css-qkdply] {
  position: relative;
  transform: translate(-25, -25);
  -webkit-transform: translate(-25, -25);
}

.css-qkdply > div,
[data-css-qkdply] > div {
  animation-fill-mode: both;
  animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
  background-color: #ffffff;
  height: 10px;
  left: -5px;
  position: absolute;
  top: -5px;
  width: 10px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
}

.css-qkdply > div:last-child,
[data-css-qkdply] > div:last-child {
  animation-delay: -0.8s;
  -webkit-animation-delay: -0.8s;
}

<div
  data-css-qkdply=""
>
  <div />
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-qkdply,
[data-css-qkdply] {
  position: relative;
  transform: translate(-25, -25);
  -webkit-transform: translate(-25, -25);
}

.css-qkdply > div,
[data-css-qkdply] > div {
  animation-fill-mode: both;
  animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
  background-color: #ffffff;
  height: 10px;
  left: -5px;
  position: absolute;
  top: -5px;
  width: 10px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
}

.css-qkdply > div:last-child,
[data-css-qkdply] > div:last-child {
  animation-delay: -0.8s;
  -webkit-animation-delay: -0.8s;
}

<div
  data-css-qkdply=""
>
  <div />
  <div />
</div>
`;
